# drf-images

./: .replit  README.md  db.sqlite3  pyproject.toml  requirements.txt  tasks.txt
authapp/: serializers.py  urls.py  views.py
authapp/templates/: login.html  signup.html
backend/: settings.py  urls.py
static/: staticfiles.json  styles.css
task/: admin.py  models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_task_by.py  0003_member_membership_team_membership_team_task_team.py  0004_alter_task_team_alter_team_member.py  0005_alter_task_team_alter_team_member.py  0006_alter_team_member.py  0007_team_teamname.py  0008_alter_membership_member_alter_team_member_and_more.py  0009_remove_team_member.py  0010_alter_team_teamname.py  0011_alter_membership_member_alter_membership_team.py  0012_alter_task_thumbnail.py  0013_alter_task_thumbnail.py  0014_alter_task_thumbnail.py  0015_alter_task_thumbnail.py  0016_alter_task_thumbnail.py  0017_alter_task_thumbnail.py  0018_alter_task_thumbnail.py  0019_alter_task_thumbnail.py  0020_alter_task_thumbnail.py
task/templates/: all-tasks.html  base.html
